--- a/config/yazi.toml
+++ b/config/yazi.toml
@@ -3,7 +3,6 @@ id   = "git"
 name = "*"
 run  = "git"
 
-[[plugin.prepend_fetchers]]
-id   = "git"
-name = "*/"
-run  = "git"
+[[plugin.prepend_previewers]]
+url = "*.md"
+run = 'piper -- CLICOLOR_FORCE=1 glow -w=$w -s=dark "$1"'
